[package]
name = "rust-dns-https"
version = "0.1.0"
authors = ["Graham Mosley <gmosley@seas.upenn.edu>", "David Cao <davidcao@seas.upenn.edu"]

[dependencies]
dns-parser = { git = "https://github.com/david-cao/dns-parser" }
hyper = "0.8.0"
serde = "0.7.0"
serde_json = "0.7.0"
serde_macros = "0.7.2"
